# rust-asciidoc

./: .gitignore  Cargo.toml  README.adoc  scratch.adoc
adoc-common/: Cargo.toml
adoc-line-scanner/: Cargo.toml
adoc-line-scanner/src/: error.rs  lib.rs  line_scanner.rs
adoc-line-scanner/src/asciidoc_line/: block_delimiter.rs  mod.rs
adoc-parser/: Cargo.toml  README.adoc
adoc-parser/examples/: scratch.adoc
adoc-parser/src/ast/: block.rs  document.rs  element.rs  inline.rs  line_scanner.rs  mod.rs
adoc-parser/src/ast/reader/: block.rs  delimiter.rs  doc_attr.rs  element_attr.rs  mod.rs  parser.rs  section.rs
src/: lib.rs  multiparse.rs
src/block_parser/: attr.rs  block_macro.rs  event.rs  mod.rs  parser.rs  tag.rs  token.rs
