[package]
name = "adoc-line-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
regex = "1"
thiserror = "1"
anyhow = "1"

itertools = "0.10"

adoc-common = { path = "../adoc-common" }

[dev-dependencies]
claim = "0.5"